src/styles/device.css
/* ... */
.device-tag-list__item:not(:first-child) {
  margin-left: 10px;
}
@media (min-width: 992px) {
  .device-tag-list__item {
    margin: 10px 0 0 10px;
  }
}

.device-tag-list__link {
  display: block;
  color: var(--black);
  padding: 10px 15px;
  font-size: 14px;
  height: 45px;
  background-color: rgba(0, 0, 0, 0.1);
  border-radius: 10px;
  white-space: nowrap;
}
.device-tag-list__link:hover {
  color: var(--black);
}

.device-section-list {
  list-style: none;
  margin: 0 0 0 0;
  padding: 0;
}

.device-section-list__item:not(:first-child) {
  margin-top: 20px;
}

.device-section-list__request-device:not(:first-child) {
  margin: 10px 0 0 0;
}

.device-section-list__item {
  margin-bottom: 100px;
}

.device-section {
  scroll-margin-top: 80px;
}

.device-section__brand-name {
  color: var(--gray-1);
  font-size: 24px;
  font-weight: 700;
  margin: 0 0 30px 0;
}

.device-grid-list {
  list-style: none;
  display: flex;
  flex-wrap: wrap;
  margin: 10px 0 0 -10px;
  padding: 0;
}

.device-grid-container {
  margin: 20px 0 0 10px;
}

.device-grid-container-header {
  color: var(--gray-1);
  font-size: 18px;
  font-weight: 600;
  margin: 0 0 20px 0;
}

.device-grid {
  position: relative;
  height: 160px;
  width: 160px;
  background-color: var(--white);
  border: 1px solid var(--gray-5);
  box-sizing: border-box;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.06);
  border-radius: 10px;
}
@media (min-width: 992px) {
  .device-grid {
    height: 295px;
    width: 295px;
  }
}

.device-grid__link {
  display: block;
  height: 100%;
  width: 100%;
}

.device-grid__image {
  width: 100%;
  height: 100%;
  object-fit: contain;
  padding: 20px 4px;
}

.device-grid__hover-blur {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
  opacity: 0.5;
  border: 2px solid #1963ef;
  box-sizing: border-box;
  border-radius: 10px;
  transform: matrix(1, 0, 0, -1, 0, 0);
}
@media (min-width: 992px) {
  .device-grid__hover-blur {
    background: linear-gradient(
      180deg,
      rgba(0, 0, 0, 0.4) 14.41%,
      rgba(0, 0, 0, 0) 26.44%
    );
  }
}

.device-grid__overlay {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: end;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
@media (min-width: 992px) {
  .device-grid__overlay {
    padding: 0 15px 15px 15px;
    flex-direction: row;
  }
}

.device-grid__overlay-pick-btn {
  margin: 0 0 15px 0;
  padding: 0;
  width: 100px;
  height: 40px;
  background: rgba(255, 255, 255, 0.9);
  border-radius: 38px;
  font-weight: 600;
  font-size: 18px;
  color: var(--gray-2);
}
.device-grid__overlay-pick-btn::after {
  content: "";
  display: inline-block;
  width: 6px;
  height: 12px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  background-image: url("/Images/right-arrow.svg");
  margin: 0 0 0 10px;
}
.device-grid__overlay-pick-btn:hover {
  cursor: pointer;
}
@media (min-width: 992px) {
  .device-grid__overlay-pick-btn {
    margin: 0;
  }
}

